making some progress, stuck on the cards...

--- a/index.html
+++ b/index.html
@@ -22,40 +22,40 @@
 			<p>Somethin about the website... idk</p>
 			<button>Sign Up</button>
 		</div>
-		<img src="#" alt="Pendragon`s symbol, a black and red dragon.">
+		<div class="bigbox"></div>
 	</div>
-	<div class="">
-		<div class="title cards"></div>
+	<div class="cardscontainer">
+		<div class="titlecards"> INTO CRYPTS OF RAY</div>
 		<div class="cards">
 			<div class="card">
-				<div></div>
-				<div></div>
+				<div class="box"></div>
+				<div>this is some subtext under an illustration or image</div>
 			</div>
 			<div class="card">
-				<div></div>
-				<div></div>
+				<div class="box"></div>
+				<div>this is some subtext under an illustration or image</div>
 			</div>
 			<div class="card">
-				<div></div>
-				<div></div>
+				<div class="box"></div>
+				<div>this is some subtext under an illustration or image</div>
 			</div>
 			<div class="card">
-				<div></div>
-				<div></div>
+				<div class="box"></div>
+				<div>this is some subtext under an illustration or image</div>
 			</div>
 		</div>
 	</div>
 	<div class="">
-		<div class="quote"></div>
-		<div class="author"></div>
+		<div class="quote">"Butt sex for free"</div>
+		<div class="author"> - Jair Bolsonaro</div>
 	</div>
 	<div class="footer">
 		<div class="content">
 			<div>
-				<div></div>
-				<div></div>
+				<div>Call to action! It`s Time!</div>
+				<div>Sign up for our product by clicking that button right over there!</div>
 			</div>
-			<div></div>
+			<button>Sign Up</button>
 		</div>
 	</div>
 </body>
