Cards section complete, it took me a while but there it is.

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			</div>
 		</div>
 	</div>
-	<div class="">
-		<div class="quote">"Butt sex for free"</div>
-		<div class="author"> - Jair Bolsonaro</div>
+	<div class="quote">
+		<div class="phrase">"Lay down your souls to the gods of Rock and Roll"</div>
+		<div class="author"> - Venom</div>
 	</div>
 	<div class="footer">
 		<div class="content">
