Finished with the rough of it, will take a look later and try to improve it

--- a/index.html
+++ b/index.html
@@ -45,17 +45,20 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="quote">
-		<div class="phrase">"Lay down your souls to the gods of Rock and Roll"</div>
-		<div class="author"> - Venom</div>
+		<div class="phrase">"Return my soul, to Huma`s breast"</div>
+		<div class="author"> - Paladine</div>
 	</div>
-	<div class="footer">
-		<div class="content">
-			<div>
-				<div>Call to action! It`s Time!</div>
-				<div>Sign up for our product by clicking that button right over there!</div>
+	<div class="containerfoot">
+		<div class="footer">
+			<div class="content">
+				<div>
+					<div class="call">Call to action! It`s Time!</div>
+					<div>Sign up for our product by clicking that button right over there!</div>
+				</div>
+				<button>Sign Up</button>
 			</div>
-			<button>Sign Up</button>
 		</div>
 	</div>
 </body>
