--- a/index.html
+++ b/index.html
@@ -1,65 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Landing Page</title>
-	<link rel="stylesheet" type="text/css" href="./style.css">
+	<meta charset = "utf-8">
+	<meta name = "viewport" content = "width=device-width, initial-scale=1">
+	<title>VI VON ZULUL</title>
+	<link rel = "stylesheet" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+	<link rel = "script" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
 </head>
-
 <body>
-	<div class="navbar">
-		<header class="logo">Header Logo</header>
-		<ul>
-			<li><a href="#">One</a></li>
-			<li><a href="#">Two</a></li>
-			<li><a href="#">Three</a></li>
-		</ul>
-	</div>
-	<div class="container">
-		<div class="info">
-			<div class="title">This Website Is Awesome</div>
-			<p>Somethin about the website... idk</p>
-			<button>Sign Up</button>
-		</div>
-		<div class="bigbox"></div>
-	</div>
-	<div class="cardscontainer">
-		<div class="titlecards"> INTO CRYPTS OF RAY</div>
-		<div class="cards">
-			<div class="card">
-				<div class="box"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-			<div class="card">
-				<div class="box"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-			<div class="card">
-				<div class="box"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-			<div class="card">
-				<div class="box"></div>
-				<div>this is some subtext under an illustration or image</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="quote">
-		<div class="phrase">"Return my soul, to Huma`s breast"</div>
-		<div class="author"> - Paladine</div>
-	</div>
-	<div class="containerfoot">
-		<div class="footer">
-			<div class="content">
-				<div>
-					<div class="call">Call to action! It`s Time!</div>
-					<div>Sign up for our product by clicking that button right over there!</div>
-				</div>
-				<button>Sign Up</button>
-			</div>
-		</div>
+	<div>IM TESTING BOOTSTRAP
 	</div>
 </body>
 </html>
