--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel = "script" href = "https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
 </head>
 <body>
-	<div>IM TESTING BOOTSTRAP
+	<div class = "container-fuild">IM TESTING BOOTSTRAP
 	</div>
 </body>
 </html>
