--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="/api/placeholder/400/200" class="card-img-top" alt="Serviço 2">
+                    <img src="elric_ruby_throne_face_close_up.jpg" class="card-img-top" alt="Serviço 2">
                     <div class="card-body">
                         <h5 class="card-title">Serviço 2</h5>
                         <p class="card-text">Uma breve descrição do serviço e como ele pode ajudar seus clientes.</p>
@@ -79,7 +79,7 @@
             </div>
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="/api/placeholder/400/200" class="card-img-top" alt="Serviço 3">
+                    <img src="von zarovich.png" class="card-img-top" alt="Serviço 3">
                     <div class="card-body">
                         <h5 class="card-title">Serviço 3</h5>
                         <p class="card-text">Uma breve descrição do serviço e como ele pode ajudar seus clientes.</p>
