--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
-                    <img src="closeup2.png" class="card-img-top image-fluid" alt="Serviço 1">
+                    <img src="closeup2.png" class="card-img-top" alt="Serviço 1">
                     <div class="card-body">
                         <h5 class="card-title">Serviço 1</h5>
                         <p class="card-text">Uma breve descrição do serviço e como ele pode ajudar seus clientes.</p>
