--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
 
     <!-- Cards Section -->
     <div class="container mt-4">
-        <h2 class="text-center mb-4">Nossos Serviços</h2>
+        <h2 class="text-center mb-4">Spellswords</h2>
         <div class="row">
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <img src="closeup2.png" class="card-img-top" alt="Serviço 1">
                     <div class="card-body">
-                        <h5 class="card-title">Serviço 1</h5>
-                        <p class="card-text">Uma breve descrição do serviço e como ele pode ajudar seus clientes.</p>
-                        <a href="#" class="btn btn-primary">Ver detalhes</a>
+                        <h5 class="card-title">Loren Soth, Knight of the Black Rose</h5>
+                        <p class="card-text">Lord Loren Soth, Knight of the Black Rose</p>
+                        <a href="https://dragonlance.fandom.com/wiki/Loren_Soth" class="btn btn-primary">See More</a>
                     </div>
                 </div>
             </div>
