--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
     <label class = "fonte">Descrição</label>
     <div class="p-3"><input type="text" size = "45" id = "descricao"></div>
     <label>Número</label>
-    <div class="p-3"><input type="number" size = "45"id = "patrimonio"></div>
+    <div class="p-3"><input type="number" pattern="[0-9]" size = "45"id = "patrimonio"></div>
     <button id = "meuBotao">
         IMPRIMIR ETIQUETA
     </button>
