--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
             <div class="mb-3">
                 <label class="form-label">Impressão em Lote (Copiar e Colar de Planilha)</label>
-                <textarea id="massData" class="form-control textarea-custom" rows="7" placeholder="Cole os dados da planilha aqui"></textarea>
+                <textarea id="massData" class="form-control textarea-custom" rows="7" placeholder="Cole os dados da planilha aqui&#10;Formato:&#10;[NÚMERO] [DESCRIÇÃO]&#10;Exemplo:&#10;1234 ABCDE"></textarea>
             </div>
 
             <button id="meuBotaoMassPrint" class="btn btn-custom w-100">
