--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ const PjeOffice = (function () {
         const valorPatrimonio = num.replace(/ç/g, "c").trim()
 
         if (valorDescricao == "" || valorPatrimonio == ""){
-            alert("LORDE ELRIC, SENHOR DOS DRAGÕES, PRÍNCIPE DA CIDADE QUE SONHA, USUÁRIO DA PORTADORA DA TORMENTA NÃO SE ALEGRA COM CAMPOS EM BRANCO!!!");
+            alert("POR FAVOR NÃO DEIXAR NENHUM DOS CAMPOS EM BRANCO!");
             return;
         }
 
